@@ -1243,6 +1243,15 @@
         debugging purposes, e.g. <code>switch3 in room 3120</code>.
       </column>
 
+      <column name="other_config" key="dp-sn">
+        Serial number.  It is a maximum 32 byte-long free-form string to
+        provide an additional switch identification. The value is returned
+        by the switch as a part of reply to OFPMP_DESC request (ofp_desc).
+        The OpenFlow specification (e.g. 1.3.5) describes the ofp_desc structure
+        to contaion "NULL terminated ASCII strings". For the compatibility
+        reasons no more than 31 ASCII characters should be used.
+      </column>
+
       <column name="other_config" key="disable-in-band"
               type='{"type": "boolean"}'>
         If set to <code>true</code>, disable in-band control on the bridge
